--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,18 @@
 
 - name: check argon fan control is present
   ansible.builtin.command: which argonone-config
-  register: argonone_installed
-  failed_when: no
-  changed_when: no
+  register: argon_installed
+  failed_when: false
+  changed_when: false
+
+- name: check argon_type is valid
+  ansible.builtin.assert:
+    that:
+      - argon_type == "one" or argon_type == "eon"
 
 - name: install argon fan control
   ansible.builtin.import_tasks: binary.yml
-  when: argonone_installed.rc != 0
+  when: argon_installed.rc != 0
 
 - name: change default temp/rpm limits
   ansible.builtin.template:
@@ -24,9 +29,9 @@
   ansible.builtin.lineinfile:
     path: /etc/systemd/system.conf
     regex: "^RuntimeWatchdogSec=.*"
-    line: RuntimeWatchdogSec=10 # TODO: test this
+    line: RuntimeWatchdogSec=10
 
 - name: enable argononed
   ansible.builtin.systemd:
     name: argononed.service
-    enabled: yes
+    enabled: true
