--- a/templates/argononed.conf
+++ b/templates/argononed.conf
@@ -18,6 +18,6 @@
 # sudo systemctl restart argononed.service
 #
 # Start below:
-{% for key, value in argononed_limits.items() %}
+{% for key, value in argon_limits.items() %}
 {{ key }}={{ value }}
 {% endfor %}
